Updated task form with stages

--- a/src/app/apps/crm-app/contact-details/contact-details.component.css
+++ b/src/app/apps/crm-app/contact-details/contact-details.component.css
@@ -44,6 +44,10 @@ h2 {
     min-width: 125px;
 }
 
+.stage {
+    width: 150px;
+}
+
 .contact-more-details {
     display: flex;
     flex-direction: row;
