--- a/src/app/apps/crm-app/contact-details/contact-details.component.html
+++ b/src/app/apps/crm-app/contact-details/contact-details.component.html
@@ -66,19 +66,19 @@
         </div>
     </div>
     <div class="task-container">
-        <h3 class="mt-3">Leads<i class="fas fa-plus-square ml-3" (click)="showTaskForm('new')"></i></h3>
+        <!-- <h3 class="mt-3">Leads<i class="fas fa-plus-square ml-3" (click)="showTaskForm('new')"></i></h3> -->
         <div class="spinner-border text-danger" *ngIf="isLoading" role="status">
             <span class="sr-only">Loading...</span>
         </div>
-        <div class="no-contacts ml-4" *ngIf="leads.length == 0 && !isLoading">
+        <!-- <div class="no-contacts ml-4" *ngIf="leads.length == 0 && !isLoading">
             <p>You haven't added any Leads</p>
-        </div>
-        <ul class="list-group list-group-flush" *ngIf="leads.length > 0">
+        </div> -->
+        <!-- <ul class="list-group list-group-flush" *ngIf="leads.length > 0">
             <li class="list-group-item" *ngFor="let lead of leads; let i = index;">
-                <div class="d-flex flex-row align-items-center">
+                <div class="d-flex flex-row align-items-center"> -->
                     <!-- <input type="checkbox" class="checkbox mr-2" (click)="completeLead(t, i)"> -->
                     <!-- <label for="stage" (click)="showStages == !showStages">{{ lead.stage }}</label> -->
-                    <select name="stage" class="selectpicker form-control stage" id="stage">
+                    <!-- <select name="stage" class="selectpicker form-control stage" id="stage">
                         <option value="lead.stage" selected>{{ lead.stage | titlecase }}</option>
                         <ng-container *ngFor="let o of stageOptions">
                             <option *ngIf="o.value != lead.stage" value="o.value">{{ o.name }}</option>
@@ -89,7 +89,7 @@
                     <i class="far fa-trash-alt m-2" (click)="deleteLead(t.id)"></i>
                 </div>
             </li>
-        </ul>
+        </ul> -->
     </div>
     <div class="task-container p-2" *ngIf="completedTasks.length > 0">
         <h3 class="ml-4 mt-3">Completed</h3>
