--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <section class="home-main-container">
-    <section class="home-container-heading p-3">
+    <!-- <section class="home-container-heading p-3">
         <div class="heading-container">
             <h1>Hi, I'm Brent Owen a Full-Stack Developer</h1>
-            <p class="mt-4">
+            <p class="mt-4"> -->
                 <!-- I've always had a fondness for solving problems and overcoming challenges. 
                 I enjoy working within a team and working together to acheive our goals. 
                 Communication, flexability and attention to detail are top priority. -->
-                I'm a freelance developer located in Chattanooga, Tn and a full time sales
+                <!-- I'm a freelance developer located in Chattanooga, Tn and a full time sales
                 representative for the largest DME in the country.
             </p>
             <button class="call-to-action px-5 py-3 mt-4" routerLink="/contact">
@@ -14,6 +14,27 @@
             </button>
             <div class="background-image mt-4"></div>
         </div>
+    </section> -->
+
+    <section class="bg-dark pt-5">
+        <div class="pt-5"></div>
+        <div class="pt-md-5"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-light">Hi, I'm Brent Owen a Software Developer</h1>
+                    <p class="text-light">
+                        I'm a freelance developer located in Chattanooga, TN.
+                    </p>
+                    <button class="btn btn-outline-light">Let's Make Something</button>
+                </div>
+                <div class="col-md-6 d-flex align-items-center justify-content-center">
+                    <img src="../../assets/family.jpg" class="hero-img" alt="Image of Brent Owen, his wife and two kids">
+                </div>
+            </div>
+        </div>
+        <div class="pb-5"></div>
+        <div class="pb-5"></div>
     </section>
     <section class="about-container mb-5">
         <div class="about-inner-container">
