--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,8 @@
-.nav-bar {
+a:hover {
+    cursor: pointer;
+}
+
+/* .nav-bar {
     background-color: #fff;
 }
 
@@ -28,7 +32,6 @@ h1 {
     width: 100%;
     max-width: 400px;
     background-color: #fff;
-    /* margin-top: 50px; */
     z-index: 101;
     overflow: scroll;
 }
@@ -100,7 +103,6 @@ h1 {
         color: #fff;
         background-color: #CD5334;
         top: 64px;
-        /* right: 20%; */
         padding: 0px !important;
     }
 
@@ -125,7 +127,6 @@ h1 {
     }
 
     .navbar-container {
-        /* padding: .4em 0px; */
         height: 64px;
     }
-}
+} */
