Updated nav items to close modile dropdown on click. Updated main section styles and layout.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
                     <p class="text-light">
                         I'm a freelance developer located in Chattanooga, TN.
                     </p>
-                    <button class="btn btn-outline-light">Let's Make Something</button>
+                    <button class="btn btn-outline-light" routerLink="/contact">Let's Make Something</button>
                 </div>
                 <div class="col-md-6 d-flex align-items-center justify-content-center">
                     <img src="../../assets/family.jpg" class="hero-img" alt="Image of Brent Owen, his wife and two kids">
@@ -36,57 +36,64 @@
         <div class="pb-5"></div>
         <div class="pb-5"></div>
     </section>
+    <div class="clipped-container bg-dark"></div>
     <section class="about-container mb-5">
-        <div class="about-inner-container">
-            <div class="flex-container d-flex flex-wrap">
-                <div class="left-container">
-                    <h3 class="mt-5"><i class="fas fa-user mr-2"></i>About Me</h3>
-                    <p>
-                        I love programming, traveling, lifting weights and hanging with my wife and kids.
-                        While I have spent most my life working in the DME field, since 2002, I've always
-                        had a passion for programming and spend most my free time developing and learning new
-                        skills. I've worked on several projects mostly custom code for platforms like
-                        Wordpress, Real Geeks, and Brillant Directories. However, my real passion is to
-                        build real world web applications and take the leap to full time developer.
-                    </p>
+        <div class="container pt-5">
+            <div class="row">
+                <div class="col-lg-6 my-2">
+                    <div class="p-4 shadow">
+                        <h3><i class="fas fa-user mr-2"></i>About Me</h3>
+                        <div class="container">
+                            <p>
+                                I love programming, traveling, lifting weights and hanging with my wife and kids.
+                                While I have spent most my life working in the DME field, since 2002, I've always
+                                had a passion for programming and spend most my free time developing and learning new
+                                skills. I've worked on several projects mostly custom code for platforms like
+                                Wordpress, Real Geeks, and Brillant Directories. However, my real passion is to
+                                build real world web applications and take the leap to full time developer.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="right-container my-5">
-                    <h3><i class="fas fa-leaf mr-2"></i>Hobbies</h3>
-                    <div class="hobbies-container d-flex flex-row justify-content-center flex-wrap">
-                        <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
-                            <i class="fas fa-laptop-code mt-3"></i>
-                            <p>Coding</p>
-                        </div>
-                        <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
-                            <i class="fas fa-dumbbell mt-3"></i>
-                            <p>Lifting</p>
-                        </div>
-                        <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
-                            <i class="fas fa-plane mt-3"></i>
-                            <p>Traveling</p>
-                        </div>
-                        <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
-                            <i class="fas fa-music mt-3"></i>
-                            <p>Music</p>
-                        </div>
-                        <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
-                            <i class="fas fa-truck-monster mt-3"></i>
-                            <p>Off Road</p>
-                        </div>
-                        <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
-                            <i class="fas fa-headset mt-3"></i>
-                            <p>Gaming</p>
+                <div class="col-lg-6 my-2">
+                    <div class="p-4 shadow ">
+                        <h3><i class="fas fa-leaf mr-2"></i>Hobbies</h3>
+                        <div class="container d-flex flex-row justify-content-center flex-wrap">
+                            <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                                <i class="fas fa-laptop-code mt-3"></i>
+                                <p>Coding</p>
+                            </div>
+                            <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                                <i class="fas fa-dumbbell mt-3"></i>
+                                <p>Lifting</p>
+                            </div>
+                            <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                                <i class="fas fa-plane mt-3"></i>
+                                <p>Traveling</p>
+                            </div>
+                            <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                                <i class="fas fa-music mt-3"></i>
+                                <p>Music</p>
+                            </div>
+                            <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                                <i class="fas fa-truck-monster mt-3"></i>
+                                <p>Off Road</p>
+                            </div>
+                            <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                                <i class="fas fa-headset mt-3"></i>
+                                <p>Gaming</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="skills-container d-flex flex-column">
+            <!-- <div class="skills-container d-flex flex-column">
                 <h3 class="mt-5"><i class="fas fa-code mr-2"></i>Engineering Skills</h3>
                 <p>
-                    <strong>I specialize in applications built with Angular and ASP.Net Core.</strong>
+                    <strong>I specialize in applications built with Angular and ASP.Net Core.</strong> -->
                     <!-- Recently I've developed a Rest API using .Net Core and currently building out
                     the frontend using <span>Angular</span> and <span>TypeScript</span>. -->
-                </p>
+                <!-- </p>
                 <p>
                     I have custom built and written every line of code for this website. Including
                     the API which is hosted on Azure.
@@ -105,7 +112,7 @@
                     <li>Bootstrap, FontAwesome and Google Fonts</li>
                     <li>HTML and CSS</li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </section>
     <section class="what-to-expect d-flex flex-column justify-content-center align-items-center mb-5">
