--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,6 +6,25 @@
     margin-top: 0px;
 }
 
+.clipped-container {
+    clip-path: polygon(0 0, 100% 0, 100% 43%, 0% 100%);
+    height: 300px;
+    width: 100%;
+    position: absolute;
+}
+
+.about-container {
+    position: relative;
+}
+
+.hobby {
+    width: 100px;
+    height: 100px;
+    font-size: 16px;
+    background-color: #CD5334;
+    color: #fff;
+}
+
 @media only screen and (min-width: 768px) {
     .hero-img {
         width: 80%;
@@ -19,7 +38,9 @@
     }
 }
 
-.home-container-heading {
+/* OLD STYLES BELOW */
+
+/* .home-container-heading {
     color: #fff;
     background-color: #666666;
     padding-bottom: 0px !important;
@@ -130,7 +151,6 @@
     }
 
     .about-inner-container {
-        /* width: 650px; */
         margin: 0px auto;
     }
 
@@ -153,4 +173,4 @@
     .what-heading-container h3 {
         font-size: 34px;
     }
-}
+} */
