--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,21 +6,21 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" routerLink="/" data-toggle="collapse" data-target="#navbarNavDropdown">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item" routerLink="/covid">
+            <li class="nav-item" routerLink="/covid" data-toggle="collapse" data-target="#navbarNavDropdown">
                 <a class="nav-link">Covid-19</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" (click)="openFile()">Resume</a>
+                <a class="nav-link" (click)="openFile()" data-toggle="collapse" data-target="#navbarNavDropdown">Resume</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Web Apps
                 </a>
             <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item bg-dark text-light" routerLink="/blogs">Blog</a>
-                <a class="dropdown-item bg-dark text-light" routerLink="/todo">To-Do</a>
+                <a class="dropdown-item bg-dark text-light" routerLink="/blogs" data-toggle="collapse" data-target="#navbarNavDropdown">Blog</a>
+                <a class="dropdown-item bg-dark text-light" routerLink="/todo" data-toggle="collapse" data-target="#navbarNavDropdown">To-Do</a>
             </div>
             </li>
         </ul>
