Added projects section. Display projects in cards

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -115,7 +115,134 @@
             </div> -->
         </div>
     </section>
-    <section class="what-to-expect d-flex flex-column justify-content-center align-items-center mb-5">
+
+    <div class="p-md-5"></div>
+
+    <section class="container skills">
+        <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Skills</h3>
+        <div class="row p-3 justify-content-center">
+            <i class="fab fa-html5"></i>
+            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-sass"></i>
+            <i class="fab fa-bootstrap"></i>
+            <i class="fab fa-js"></i>
+            <i class="fab fa-angular"></i>
+            <i class="fab fa-react"></i>
+            <i class="fab fa-node-js"></i>
+            <i class="fab fa-git"></i>
+            <i class="fas fa-database"></i>
+        </div>
+    </section>
+
+    <div class="p-5"></div>
+
+    <section class="container projects pb-4">
+        <h3><i id="skill-heading" class="fas fa-project-diagram mr-2"></i>Projects</h3>
+        <div class="row">
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/ppi-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">PPI</h5>
+                        <p class="card-text">
+                            A web app developed to help coaches and associations evaluate players to create balanced teams.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/js-apps.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Web Apps</h5>
+                        <p class="card-text">
+                            Small web apps covering JavaScript concepts which displays the code and the result.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/deco-2.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Market Place</h5>
+                        <p class="card-text">
+                            Created landing page from PDF and assets. Responsive design using Flex-Box.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/deco-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Landing Page</h5>
+                        <p class="card-text">
+                            Created landing page from PDF and assets. Responsive design using Flex-Box.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/holden-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Custom Element</h5>
+                        <p class="card-text">
+                            Custom markup to be used on multiple Real Geeks sites. Card layout with hover effects.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/holden-2.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Custom Element</h5>
+                        <p class="card-text">
+                            Custom three item carousel to be used on multiple Real Geeks sites.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/how-it-works-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Landing Page</h5>
+                        <p class="card-text">
+                            Created landing page from PDF and assets. Responsive design using Flex-Box.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/porrada-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Landing Page</h5>
+                        <p class="card-text">
+                            Create landing page from PDF and assets. Responsive design using Flex-Box.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="../../assets/nucamp-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Website</h5>
+                        <p class="card-text">
+                            Complete website using responsive design and accessability best practices.
+                        </p>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <div class="p-5"></div>
+    <!-- <section class="what-to-expect d-flex flex-column justify-content-center align-items-center mb-5">
         <div class="what-heading-container">
             <h3 class="mt-5"><i class="fas fa-chalkboard mr-2"></i>What To Expect</h3>
         </div>
@@ -145,5 +272,5 @@
                 </p>
             </div>
         </div>
-    </section>
+    </section> -->
 </section>
