--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -29,6 +29,36 @@
     color: #fff;
 }
 
+
+#skill-heading {
+    font-size: 2.3 !important;
+}
+
+.fab {
+    font-size: 5rem;
+    padding: .6em;
+}
+
+.card {
+    max-width: 350px;
+    max-height: 500px;
+    margin: .5em;
+    transition: transform .2s;
+}
+
+.img-container {
+    overflow: hidden;
+}
+
+.card img {
+    height: 195px;
+}
+
+.card img:hover {
+    transform: scale(1.5);
+}
+
+
 @media only screen and (min-width: 768px) {
     .hero-img {
         width: 80%;
