Updated styles and layout

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<section class="footer-container">
+<section class="footer-container bg-dark p-5">
     <div class="social-links">
         <div class="link-name flex-grow-1 p-3">
             <span class="d-flex justify-content-around">
