--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,7 +34,7 @@
     font-size: 2.3 !important;
 }
 
-.fab {
+.skill {
     font-size: 5rem;
     padding: .6em;
 }
@@ -71,140 +71,3 @@
         margin-top: 2.5em;
     }
 }
-
-/* OLD STYLES BELOW */
-
-/* .home-container-heading {
-    color: #fff;
-    background-color: #666666;
-    padding-bottom: 0px !important;
-}
-
-.home-container-heading h1 {
-    margin-top: 10px;
-    font-weight: bolder;
-}
-
-.home-container-heading p {
-    line-height: 1.8em;
-}
-
-.home-container-heading button {
-    border: none;
-    background-color: #CD5334;
-    color: #fff;
-    font-size: 1.5em;
-    font-weight: 500;
-}
-
-.background-image {
-    background-image: url('../../assets/upper_image.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 300px;
-}
-
-.about-container span {
-    color: #CD5334;
-}
-
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.left-container {
-    max-width: 800px;
-}
-
-.right-container {
-    max-width: 400px;
-}
-
-.hobby {
-    width: 100px;
-    height: 100px;
-    font-size: 16px;
-    background-color: #CD5334;
-    color: #fff;
-}
-
-.hobby i {
-    font-size: 22px;
-}
-
-.hobby p {
-    margin-top: 6px;
-}
-
-.about-inner-container {
-    padding: 1em;
-}
-
-.skills-container {
-    max-width: 1000px;
-    margin: 0px auto;
-}
-
-.what-inner-container {
-    width: 100%;
-}
-
-.what-inner-container span {
-    color: #CD5334;
-    font-weight: 600;
-}
-
-.tri-container {
-    max-width: 400px;
-}
-
-@media only screen and (min-width: 768px) {
-    .home-container-heading {
-        height: 411px;
-    }
-    
-    .background-image {
-        position: absolute;
-        top: 150px;
-        width: 350px;
-        margin-left: 400px;
-    }
-
-    .home-container-heading p {
-        width: 400px;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
-    .heading-container {
-        width: 720px;
-        margin: 0px auto;
-    }
-
-    .about-inner-container {
-        margin: 0px auto;
-    }
-
-    .about-inner-container h2 {
-        font-size: 38px;
-    }
-
-    .about-inner-container h3 {
-        font-size: 34px;
-    }
-
-    .about-inner-container p {
-        font-size: 20px;
-    }
-
-    .skills-container {
-        max-width: 800px;
-    }
-
-    .what-heading-container h3 {
-        font-size: 34px;
-    }
-} */
