--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -87,32 +87,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="skills-container d-flex flex-column">
-                <h3 class="mt-5"><i class="fas fa-code mr-2"></i>Engineering Skills</h3>
-                <p>
-                    <strong>I specialize in applications built with Angular and ASP.Net Core.</strong> -->
-                    <!-- Recently I've developed a Rest API using .Net Core and currently building out
-                    the frontend using <span>Angular</span> and <span>TypeScript</span>. -->
-                <!-- </p>
-                <p>
-                    I have custom built and written every line of code for this website. Including
-                    the API which is hosted on Azure.
-                </p>
-                <p>Technologies used include:</p>
-                <ul>
-                    <li>Angular: TypeScript / JavaScript</li>
-                    <li>ASP.Net Core: C#</li>
-                    <li>Web Apps use MySQL or FireBase Database</li>
-                    <li>Azure to host ASP.Net Core web apps</li>
-                    <li>Ng2-Charts / Chart.js used for the COVID graphs</li>
-                    <li>EmailJS for the contact form</li>
-                    <li>FireBase Auth to login/logout</li>
-                    <li>REST API's for the COVID data</li>
-                    <li>GIMP</li>
-                    <li>Bootstrap, FontAwesome and Google Fonts</li>
-                    <li>HTML and CSS</li>
-                </ul>
-            </div> -->
         </div>
     </section>
 
@@ -121,16 +95,16 @@
     <section class="container skills">
         <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Skills</h3>
         <div class="row p-3 justify-content-center">
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
-            <i class="fab fa-sass"></i>
-            <i class="fab fa-bootstrap"></i>
-            <i class="fab fa-js"></i>
-            <i class="fab fa-angular"></i>
-            <i class="fab fa-react"></i>
-            <i class="fab fa-node-js"></i>
-            <i class="fab fa-git"></i>
-            <i class="fas fa-database"></i>
+            <i class="skill fab fa-html5"></i>
+            <i class="skill fab fa-css3-alt"></i>
+            <i class="skill fab fa-sass"></i>
+            <i class="skill fab fa-bootstrap"></i>
+            <i class="skill fab fa-js"></i>
+            <i class="skill fab fa-angular"></i>
+            <i class="skill fab fa-react"></i>
+            <i class="skill fab fa-node-js"></i>
+            <i class="skill fab fa-git"></i>
+            <i class="skill fas fa-database"></i>
         </div>
     </section>
 
