--- a/src/app/apps/blog-app/blog-app.component.html
+++ b/src/app/apps/blog-app/blog-app.component.html
@@ -1,5 +1,5 @@
-<section>
-    <h2 class="p-3"><i class="fas fa-blog mr-2"></i>Blogs</h2>
+<section class="mt-5">
+    <h2 class="p-3 bg-dark"><i class="fas fa-blog mr-2"></i>Blogs</h2>
     <!-- <button class="btn" (click)="auth.signIn()">signIn</button>
     <button *ngIf="auth.auth.authState | async as user;" class="btn" (click)="auth.signOut()">signOut</button>
     {{ user }} -->
