--- a/src/app/apps/todo-app/todo-app.component.html
+++ b/src/app/apps/todo-app/todo-app.component.html
@@ -1,5 +1,5 @@
-<section class="todo-container">
-    <h2 class="p-3"><i class="fas fa-clipboard-check mr-2"></i>To-Do App</h2>
+<section class="todo-container mt-5">
+    <h2 class="p-3 bg-dark"><i class="fas fa-clipboard-check mr-2"></i>To-Do App</h2>
     <h3 class="ml-3" *ngIf="user != null">Welcome, {{ user.name }}</h3>
     <div class="form-container">
         <h3 class="ml-4 mt-3">Add To-Do Group</h3>
